--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>什么随机生成 - Ultimate</title>
+    <title>茶话会随机生成 - Ultimate</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <!-- 修改点 1：引入了 Noto Sans SC (思源黑体) 作为替补 -->
     <link href="https://fonts.googleapis.com/css2?family=DotGothic16&family=Noto+Sans+SC:wght@500;700&display=swap" rel="stylesheet">
@@ -124,7 +124,7 @@
                     </div>
                 </div>
                 <h1 class="text-3xl md:text-5xl font-bold tracking-tight text-green-500" style="text-shadow: 0 0 10px rgba(0,255,65,0.5);">
-                    什么随机生成
+                    茶话会随机生成
                 </h1>
             </div>
             <div class="text-right font-mono text-xs md:text-sm opacity-80">
